Add missing import

--- a/gas-prices-project.ipynb
+++ b/gas-prices-project.ipynb
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "Ees33AqWrFBU"
       },
@@ -86,7 +86,7 @@
         "from pyspark.sql.types import IntegerType, LongType, DoubleType, TimestampType\n",
         "from pyspark.sql.functions import isnan, when, count, col\n",
         "from pyspark.sql.window import Window\n",
-        "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler, Imputer\n",
+        "from pyspark.ml.feature import StringIndexer, OneHotEncoder, StandardScaler, VectorAssembler, Imputer\n",
         "from pyspark.ml.pipeline import Pipeline\n",
         "from pyspark.ml.regression import LinearRegression, RandomForestRegressor\n",
         "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
