Add a design assumption in report

--- a/gas-prices-project.ipynb
+++ b/gas-prices-project.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Ees33AqWrFBU"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "bDurn79UslkF"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "kaqX9KQDsvbK"
       },
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "00S4AdG6t8f_"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "t8XYxxa5usLL"
       },
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "CRiXSXFAp56D"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "yYLgSG3Tzuv7"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "KlguhqV60yua"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "h8Zsb6Az1jo4"
       },
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "epTJL5tU2mGu"
       },
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "iYUII0oi2pXS"
       },
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "-Kqd3JjE6FdP"
       },
@@ -582,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Gc9dNH3Q8rCb"
       },
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "p-oLYkGrUQ_S"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Hz3iBsPuWRXj"
       },
@@ -732,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "O_luge0WW17B"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -796,7 +796,7 @@
       "metadata": {
         "id": "ky9_5hsFGuLJ"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "n0XE_ZxhcRhS",
         "colab": {
@@ -835,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "c54nwl_rc_dv"
       },
@@ -858,7 +858,7 @@
       "metadata": {
         "id": "5TbU3j0lHvza"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +874,7 @@
         },
         "outputId": "6241531d-f14f-4ee6-8ffb-95855807980f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,7 +1041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "TEwozOT5gh21"
       },
@@ -1073,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "y6cbasxyiz7g"
       },
@@ -1121,7 +1121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "IULkmgFnjKtA"
       },
@@ -1169,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "Wv0hKqfZmRM8"
       },
@@ -1184,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "H5OZjTBSmixV"
       },
@@ -1239,7 +1239,7 @@
       "metadata": {
         "id": "Jnb1icy2Jndh"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1264,7 +1264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "6AdhqSBJq2Ti",
         "colab": {
@@ -1294,7 +1294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "ntoy_AASrJQN"
       },
@@ -1308,7 +1308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "O_h0VJFbpiqM",
         "colab": {
@@ -1352,7 +1352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "JjSZ_mosp56o",
         "colab": {
@@ -1393,12 +1393,12 @@
       "metadata": {
         "id": "cckcgdy4INTT"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "rxC3-AEttkto"
       },
@@ -1540,7 +1540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "cIJDZAaO6zq1"
       },
@@ -1554,7 +1554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "hU5ECHt51Nmy"
       },
@@ -1579,7 +1579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "xg8oJOyu35ZK",
         "colab": {
@@ -1611,7 +1611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "Q0ajz3fQ5ybS",
         "colab": {
@@ -1650,7 +1650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "pbYB_xx3AxWE",
         "colab": {
@@ -1684,7 +1684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "UEUr2tSh4qFZ"
       },
@@ -1738,7 +1738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "Cubypgec4uWx"
       },
@@ -1749,7 +1749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "mi1QwgNv-Mz0"
       },
@@ -1778,7 +1778,7 @@
         },
         "outputId": "c0e690ba-2614-4298-f675-1eed41165de9"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1804,7 +1804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "JmIcAgUVCIt1"
       },
@@ -1816,7 +1816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "cwEda5BJ5DpN",
         "colab": {
@@ -1855,7 +1855,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "_c9Uz_mm9rXP",
         "colab": {
@@ -1882,7 +1882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "hbGIt2aB8N7v",
         "colab": {
@@ -2262,7 +2262,9 @@
       "source": [
         "For the following analysis, we select a single combination of station and fuel type (`station_id = 1000007`, `fuel_name = SP98`).  \n",
         "\n",
-        "By filtering the dataset in this way, we ensure that the model focuses on predicting the price for a single location and fuel, simplifying the analysis and allowing us to clearly evaluate temporal patterns and feature effects. This also let us save a considerable amount of computation time, while being more accurate as if we had trained our models on multiple stations or gas."
+        "By filtering the dataset in this way, we ensure that the model focuses on predicting the price for a single location and fuel, simplifying the analysis and allowing us to clearly evaluate temporal patterns and feature effects.\n",
+        "\n",
+        "**Note that this also let us save a considerable amount of computation time, while being more accurate as if we had trained our models on multiple stations or gas. We are aware this is not ideal but the execution time of more complex models was way too high. This is an assumption we made on purpose!**"
       ],
       "metadata": {
         "id": "h4chTXcO1Up_"
@@ -2516,7 +2518,7 @@
         "id": "H-g8GELU59oA",
         "outputId": "73513f60-be6a-405a-c87a-9e1f2fa9933c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2587,7 +2589,7 @@
         "id": "qjADcJMv6ZPR",
         "outputId": "8715538a-4ae6-486d-c26f-c21fb580579b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2612,7 +2614,7 @@
         "id": "Tc76Shph6foI",
         "outputId": "69bb507a-c2e0-4e35-95f1-c8c076ce2445"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
