Fix price index formula

--- a/gas-prices-project.ipynb
+++ b/gas-prices-project.ipynb
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GE0Yj2bxwt8m",
-        "outputId": "f8a23d85-b33b-406e-a02b-a7b3c057f23f"
+        "outputId": "413fa851-34f8-4232-b0e6-007e6030e574"
       },
       "outputs": [
         {
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "Ees33AqWrFBU"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "bDurn79UslkF"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "kaqX9KQDsvbK"
       },
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "00S4AdG6t8f_"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "t8XYxxa5usLL"
       },
@@ -225,13 +225,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iIou-yO3rX1Q",
-        "outputId": "f16eb00b-9672-4c99-c469-604d9757a903"
+        "outputId": "fd94d989-d0ec-4f73-efb9-503527f69207"
       },
       "outputs": [
         {
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "CRiXSXFAp56D"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "yYLgSG3Tzuv7"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "KlguhqV60yua"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "h8Zsb6Az1jo4"
       },
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "epTJL5tU2mGu"
       },
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "iYUII0oi2pXS"
       },
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "-Kqd3JjE6FdP"
       },
@@ -582,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "Gc9dNH3Q8rCb"
       },
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "p-oLYkGrUQ_S"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Hz3iBsPuWRXj"
       },
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "O_luge0WW17B"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -835,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "c54nwl_rc_dv"
       },
@@ -1063,9 +1063,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The weekly national average price is first computed per fuel type. Similarly, the weekly average price per station is calculated.  \n",
+        "The daily national average price is first computed per fuel type. Similarly, the daily average price per station is calculated.  \n",
         "\n",
-        "These two datasets are then joined to compute a price index for each station, representing how a station's fuel price deviates from the national weekly average. This index facilitates the comparison of prices across stations and over time, normalizing for overall fuel trends."
+        "These two datasets are then joined to compute a price index for each station, representing how a station's fuel price deviates from the national daily average. This index facilitates the comparison of prices across stations and over time, normalizing for overall fuel trends."
       ],
       "metadata": {
         "id": "FBsuHe-uDCjO"
@@ -1073,173 +1073,125 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "gas_df = gas_df.withColumn(\"day\", F.to_date(\"date\")) # add the day column (remove time from date)"
+      ],
+      "metadata": {
+        "id": "0bzKizVhYmFm"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
         "id": "y6cbasxyiz7g"
       },
       "outputs": [],
       "source": [
-        "# Get the national fuel price per week\n",
-        "price_per_week = (\n",
+        "# Get the national fuel price per day\n",
+        "price_per_day = (\n",
         "  gas_df\n",
-        "  .groupBy(\"fuel_name\", \"year\", \"week\")\n",
+        "  .groupBy(\"fuel_name\", \"day\")\n",
         "  .agg(\n",
-        "    F.mean(\"price\").alias(\"avg_price_week\")\n",
+        "    F.mean(\"price\").alias(\"avg_price_day\")\n",
         "  )\n",
         ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Bb4fqHyly7N3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c00af9f-6b55-49b4-80ce-d04951a4936c"
+        "outputId": "d642c989-f66b-4c33-c265-c63f5b77c71d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+----+----+------------------+\n",
-            "|fuel_name|year|week|    avg_price_week|\n",
-            "+---------+----+----+------------------+\n",
-            "|      E10|2023|   8|  1.88644728915661|\n",
-            "|     SP98|2023|  23|1.9446689509221469|\n",
-            "|      E10|2023|  30| 1.875674081529899|\n",
-            "+---------+----+----+------------------+\n",
+            "+---------+----------+------------------+\n",
+            "|fuel_name|       day|     avg_price_day|\n",
+            "+---------+----------+------------------+\n",
+            "|      E85|2023-09-13|1.0503883231500397|\n",
+            "|      E10|2023-02-02|1.9183217574322589|\n",
+            "|      E85|2023-02-10|1.1415548961424369|\n",
+            "+---------+----------+------------------+\n",
             "only showing top 3 rows\n"
           ]
         }
       ],
       "source": [
-        "price_per_week.show(3)"
+        "price_per_day.show(3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IULkmgFnjKtA"
-      },
-      "outputs": [],
       "source": [
-        "# Get the fuel price per week per station\n",
-        "price_per_week_per_station = (\n",
+        "# Join and apply the price index formula (given in the slides)\n",
+        "price_index_df = (\n",
         "  gas_df\n",
-        "  .groupBy(\"station_id\", \"fuel_name\", \"year\", \"week\")\n",
-        "  .agg(\n",
-        "    F.mean(\"price\").alias(\"avg_price_week_station\")\n",
+        "  .join(price_per_day, on=[\"fuel_name\", \"day\"], how=\"inner\")\n",
+        "  .withColumn(\n",
+        "      \"price_index\",\n",
+        "      100 * (F.col(\"price\") - F.col(\"avg_price_day\")) / (F.col(\"avg_price_day\") + 1)\n",
         "  )\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cZZs_iC-y90M",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6b90add7-6bdc-4fe8-9d2b-434216efef76"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+----------+---------+----+----+----------------------+\n",
-            "|station_id|fuel_name|year|week|avg_price_week_station|\n",
-            "+----------+---------+----+----+----------------------+\n",
-            "|   1000001|      E10|2023|  27|                 1.814|\n",
-            "|   1000001|     SP98|2023|   4|                1.8935|\n",
-            "|   1000004|   Gazole|2023|  47|                  1.89|\n",
-            "+----------+---------+----+----+----------------------+\n",
-            "only showing top 3 rows\n"
-          ]
-        }
       ],
-      "source": [
-        "price_per_week_per_station.show(3)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "Wv0hKqfZmRM8"
+        "id": "8F0CNmzDai_Q"
       },
-      "outputs": [],
-      "source": [
-        "# Join both dataframes for the computation of the price index\n",
-        "price_index_per_week_per_station = (\n",
-        "  price_per_week_per_station\n",
-        "  .join(price_per_week,on=[\"fuel_name\", \"year\", \"week\"], how=\"inner\")\n",
-        ")"
-      ]
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "H5OZjTBSmixV"
-      },
-      "outputs": [],
-      "source": [
-        "# Apply the formula to compute the price index\n",
-        "price_index_per_week_per_station = price_index_per_week_per_station.withColumn(\n",
-        "  \"price_index\",\n",
-        "  100 * (F.col(\"avg_price_week_station\") - F.col(\"avg_price_week\")) / (F.col(\"avg_price_week\") + 1)\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "arhlwCqXmsFz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62005a5c-b894-41df-e626-77c3a9b2e002"
+        "outputId": "0ab0a3ae-e805-4b63-ca03-6d581af48007"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+----+----+----------+----------------------+------------------+--------------------+\n",
-            "|fuel_name|year|week|station_id|avg_price_week_station|    avg_price_week|         price_index|\n",
-            "+---------+----+----+----------+----------------------+------------------+--------------------+\n",
-            "|     SP98|2022|  16|   1360002|                 1.999|1.8563933008189997|   4.992544238922263|\n",
-            "|     SP98|2022|  16|   1440003|    1.8023333333333333|1.8563933008189997| -1.8925953743893034|\n",
-            "|     SP98|2022|  17|   6330003|                 1.866|1.8772630209481855|-0.39144912599869885|\n",
-            "|     SP98|2022|  16|   8400004|                 1.849|1.8563933008189997|-0.25883343224757765|\n",
-            "|     SP98|2022|  17|  10270006|     1.947571428571429|1.8772630209481855|  2.4435863913502662|\n",
-            "+---------+----+----+----------+----------------------+------------------+--------------------+\n",
+            "+---------+----------+----------+-------+----------+--------+---------+-------------------+-------+-----+--------------------+--------------------+--------------------+----+-----+----+------------------+-------------------+\n",
+            "|fuel_name|       day|station_id|zipcode|population|latitude|longitude|               date|fuel_id|price|             address|                city|            services|year|month|week|     avg_price_day|        price_index|\n",
+            "+---------+----------+----------+-------+----------+--------+---------+-------------------+-------+-----+--------------------+--------------------+--------------------+----+-----+----+------------------+-------------------+\n",
+            "|      E85|2023-09-13|   1000001|   1000|         R|  46.201|    5.198|2023-09-13 13:26:00|      3|1.034|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    9|  37|1.0503883231500397|-0.7992789933987762|\n",
+            "|      E85|2023-09-13|   1000001|   1000|         R|  46.201|    5.198|2023-09-13 20:06:00|      3|1.034|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    9|  37|1.0503883231500397|-0.7992789933987762|\n",
+            "|      E10|2023-02-02|   1000007|   1000|         R|  46.221|    5.245|2023-02-02 10:08:18|      5|1.835|AVENUE FRANCOIS P...|     Bourg-en-Bresse|Vente de pétrole ...|2023|    2|   5|1.9183217574322589| -2.855125800301442|\n",
+            "|      E85|2023-09-13|   1000008|   1000|         R|  46.199|    5.241|2023-09-13 08:51:00|      3| 1.06|Bd Charles de Gaulle|     BOURG-EN-BRESSE|Toilettes publiqu...|2023|    9|  37|1.0503883231500397| 0.4687734875115649|\n",
+            "|      E85|2023-09-13|   1000008|   1000|         R|  46.199|    5.241|2023-09-13 13:26:00|      3| 1.06|Bd Charles de Gaulle|     BOURG-EN-BRESSE|Toilettes publiqu...|2023|    9|  37|1.0503883231500397| 0.4687734875115649|\n",
+            "+---------+----------+----------+-------+----------+--------+---------+-------------------+-------+-----+--------------------+--------------------+--------------------+----+-----+----+------------------+-------------------+\n",
             "only showing top 5 rows\n"
           ]
         }
       ],
       "source": [
-        "price_index_per_week_per_station.show(5)"
+        "price_index_df.show(5)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Assert price index mean per week is roughly 0 (since formula centers around avg)\n",
-        "pi_mean = price_index_per_week_per_station.agg(F.mean(\"price_index\")).collect()[0][0]\n",
+        "# Assert price index mean is roughly 0 (since formula centers around avg)\n",
+        "pi_mean = price_index_df.agg(F.mean(\"price_index\")).collect()[0][0]\n",
         "assert abs(pi_mean) < 1e-1, f\"Price index mean is {pi_mean}, expected 0\""
       ],
       "metadata": {
         "id": "Jnb1icy2Jndh"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1564,7 +1516,7 @@
         "gas_df_with_price_index = (\n",
         "  gas_df.alias(\"g\")\n",
         "  .join(\n",
-        "    price_index_per_week_per_station.alias(\"p\"),\n",
+        "    price_index_df.alias(\"p\"),\n",
         "    on=[\n",
         "      F.col(\"g.station_id\") == F.col(\"p.station_id\"),\n",
         "      F.col(\"g.fuel_name\") == F.col(\"p.fuel_name\"),\n",
