--- a/gas-prices-project.ipynb
+++ b/gas-prices-project.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Ees33AqWrFBU"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "bDurn79UslkF"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "kaqX9KQDsvbK"
       },
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "00S4AdG6t8f_"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "t8XYxxa5usLL"
       },
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "CRiXSXFAp56D"
       },
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "yYLgSG3Tzuv7"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "KlguhqV60yua"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "h8Zsb6Az1jo4"
       },
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "epTJL5tU2mGu"
       },
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "iYUII0oi2pXS"
       },
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "-Kqd3JjE6FdP"
       },
@@ -582,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Gc9dNH3Q8rCb"
       },
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "p-oLYkGrUQ_S"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Hz3iBsPuWRXj"
       },
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "O_luge0WW17B"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -835,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "c54nwl_rc_dv"
       },
@@ -1079,12 +1079,12 @@
       "metadata": {
         "id": "0bzKizVhYmFm"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "y6cbasxyiz7g"
       },
@@ -1102,7 +1102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "Bb4fqHyly7N3",
         "colab": {
@@ -1134,7 +1134,7 @@
       "cell_type": "code",
       "source": [
         "# Join and apply the price index formula (given in the slides)\n",
-        "price_index_df = (\n",
+        "gas_df = (\n",
         "  gas_df\n",
         "  .join(price_per_day, on=[\"fuel_name\", \"day\"], how=\"inner\")\n",
         "  .withColumn(\n",
@@ -1146,12 +1146,12 @@
       "metadata": {
         "id": "8F0CNmzDai_Q"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "arhlwCqXmsFz",
         "colab": {
@@ -1178,20 +1178,20 @@
         }
       ],
       "source": [
-        "price_index_df.show(5)"
+        "gas_df.show(5)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Assert price index mean is roughly 0 (since formula centers around avg)\n",
-        "pi_mean = price_index_df.agg(F.mean(\"price_index\")).collect()[0][0]\n",
+        "pi_mean = gas_df.agg(F.mean(\"price_index\")).collect()[0][0]\n",
         "assert abs(pi_mean) < 1e-1, f\"Price index mean is {pi_mean}, expected 0\""
       ],
       "metadata": {
         "id": "Jnb1icy2Jndh"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1508,63 +1508,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "hU5ECHt51Nmy"
-      },
-      "outputs": [],
-      "source": [
-        "# Include price index to the main DataFrame for the graph\n",
-        "gas_df_with_price_index = (\n",
-        "  gas_df.alias(\"g\")\n",
-        "  .join(\n",
-        "    price_index_df.alias(\"p\"),\n",
-        "    on=[\n",
-        "      F.col(\"g.station_id\") == F.col(\"p.station_id\"),\n",
-        "      F.col(\"g.fuel_name\") == F.col(\"p.fuel_name\"),\n",
-        "      F.col(\"g.year\") == F.col(\"p.year\"),\n",
-        "      F.col(\"g.week\") == F.col(\"p.week\"),\n",
-        "    ],\n",
-        "    how=\"left\"\n",
-        "  )\n",
-        "  .select(\"g.*\", F.col(\"p.price_index\"))\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xg8oJOyu35ZK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4d8f19cf-b409-4598-cc1a-26917418317c"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+----------+-------+----------+--------+---------+-------------------+-------+---------+-----+--------------------+--------------------+--------------------+----+-----+----+----------+---------------+--------------------+\n",
-            "|station_id|zipcode|population|latitude|longitude|               date|fuel_id|fuel_name|price|             address|                city|            services|year|month|week|week_index|department_code|         price_index|\n",
-            "+----------+-------+----------+--------+---------+-------------------+-------+---------+-----+--------------------+--------------------+--------------------+----+-----+----+----------+---------------+--------------------+\n",
-            "|   1000001|   1000|         R|  46.201|    5.198|2022-07-01 11:23:43|      1|   Gazole| 2.09|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2022|    7|  26|        26|             10|-0.38958631117739273|\n",
-            "|   1000001|   1000|         R|  46.201|    5.198|2023-01-02 07:53:26|      1|   Gazole|1.867|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    1|   1|        53|             10| -1.5180507154811786|\n",
-            "|   1000001|   1000|         R|  46.201|    5.198|2023-01-05 09:33:37|      1|   Gazole|1.877|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    1|   1|        53|             10| -1.5180507154811786|\n",
-            "|   1000001|   1000|         R|  46.201|    5.198|2023-01-09 14:51:49|      1|   Gazole|1.875|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    1|   2|        54|             10| -1.5618363462167615|\n",
-            "|   1000001|   1000|         R|  46.201|    5.198|2023-01-11 09:23:54|      1|   Gazole|1.859|596 AVENUE DE TRE...|SAINT-DENIS-LèS-B...|Station de gonfla...|2023|    1|   2|        54|             10| -1.5618363462167615|\n",
-            "+----------+-------+----------+--------+---------+-------------------+-------+---------+-----+--------------------+--------------------+--------------------+----+-----+----+----------+---------------+--------------------+\n",
-            "only showing top 5 rows\n"
-          ]
-        }
-      ],
-      "source": [
-        "gas_df_with_price_index.show(5)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "Q0ajz3fQ5ybS",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1624,8 +1567,8 @@
         "# Define basic filters for the Map\n",
         "# In a real-world application, one would filter dynamically over the Map (using JS for example)\n",
         "\n",
-        "fuels = [row[\"fuel_name\"] for row in gas_df_with_price_index.select(\"fuel_name\").distinct().collect()]\n",
-        "weeks = [row[\"week_index\"] for row in gas_df_with_price_index.select(\"week_index\").distinct().collect()]\n",
+        "fuels = [row[\"fuel_name\"] for row in gas_df.select(\"fuel_name\").distinct().collect()]\n",
+        "weeks = [row[\"week_index\"] for row in gas_df.select(\"week_index\").distinct().collect()]\n",
         "\n",
         "FUEL = np.random.choice(fuels)\n",
         "WEEK = np.random.choice(weeks)\n",
@@ -1645,7 +1588,7 @@
         "# Get average indices by department, by fuel type and by week for the graph\n",
         "# Note that the filtering is made with Spark before moving to Pandas for performances\n",
         "dept_price_index = (\n",
-        "  gas_df_with_price_index\n",
+        "  gas_df\n",
         "  .filter(\n",
         "    (F.col(\"fuel_name\") == FUEL) & (F.col(\"week_index\") == WEEK)\n",
         "  )\n",
@@ -2252,6 +2195,15 @@
       ],
       "metadata": {
         "id": "9GWb38Bh3W27"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**We did not include the price index into the model features on purpose! This feature would have contained future price information regarding what we want to predict and this information is not available in real life at time t because it includes future prices in the mean. One can add a price index lag but this does not add any more information to the model capacity because it is only a linear transformation of the price of the lag t-1.**"
+      ],
+      "metadata": {
+        "id": "UGySztYBhLE5"
       }
     },
     {
